--- a/login-signup_screen.html
+++ b/login-signup_screen.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <head>
     <title>Notes App Login</title>
-
 </head>
 
 <body>
@@ -22,4 +21,5 @@
         </div>
         <button type = "submit">Login</button>
     </form>
+    <script src ="send-detail.js"></script>
 </body>
