debugged the send details and login screen

--- a/login-signup_screen.html
+++ b/login-signup_screen.html
@@ -13,13 +13,13 @@
     <form>
         <div>
         <label> User Name : </label>
-        <input type = "text" name = "username" required>
+        <input type = "text" id = "username" name = "username" required>
     </div>
     <div>
         <label>  Password : </label>
-        <input type = "password" name = "password" required>
+        <input type = "password" id = "password" name = "password" required>
         </div>
-        <button type = "submit">Login</button>
+        <button type = "button" onclick="submitForm()">Login</button>
     </form>
     <script src ="send-detail.js"></script>
 </body>
